--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -197,8 +197,8 @@
     "price_values = data.price.values\n",
     "\n",
     "plt.scatter(mileage_values, price_values)\n",
-    "### REVIEW. Автор ревью: SorokinaIrina, дата ревью: 05/02/2021,"
-    "### Текст ревью: рекомендую добавить в функцию scatter параметр alpha (alpha = 0.3, к примеру), так будет лучше видна плотность точек."
+    "### REVIEW. Автор ревью: SorokinaIrina, дата ревью: 05/02/2021,",
+    "### Текст ревью: рекомендую добавить в функцию scatter параметр alpha (alpha = 0.3, к примеру), так будет лучше видна плотность точек.",
     "plt.xlabel('Mileage')\n",
     "plt.ylabel('Price')\n",
     "plt.title('Price by mileage')\n",
