--- a/search_for_anomalies.ipynb
+++ b/search_for_anomalies.ipynb
@@ -20,7 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Попробуем найти аномалии в датасете. Использовать будем методами LocalOutlierFactor и IsolationForest из пакета sklearn."
+    "Попробуем найти аномалии в датасете. Использовать будем методами LocalOutlierFactor и IsolationForest из пакета sklearn. \n",
+    "\n",
+    "LocalOutlierFactor реализует алгоритм локального уровеня выброса, который основывается на концепции локальной плотности, где локальность задаётся k ближайшими соседями, расстояния до которых используются для оценки плотности. Путём сравнения локальной плотности объекта с локальной плотностью его соседей можно выделить области с аналогичной плотностью и точки, которые имеют существенно меньшую плотность, чем её соседи. Эти точки считаются выбросами.\n",
+    "\n",
+    "Наиболее распространенные методы, используемые для обнаружения аномалий, основаны на построении профиля того, что является «нормальным»: аномалии сообщаются как те экземпляры в наборе данных, которые не соответствуют нормальному профилю. IsolationForest использует другой подход: вместо того, чтобы пытаться построить модель обычных экземпляров, он явно изолирует аномальные точки в наборе данных. Основным преимуществом этого подхода является возможность использования методов выборки до такой степени, которая недопустима для методов на основе профилей, создавая очень быстрый алгоритм с низким потреблением памяти."
    ]
   },
   {
