--- a/ridge-regression.ipynb
+++ b/ridge-regression.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "source": [
     "Модель будем строить следующим образом: независимая переменная - год  выпуска авто, зависимая - пробег авто.\n",
-    "Строить будем классическую линейную регрессию, а также гребневую регрессию. "
+    "Строить будем классическую линейную регрессию, а также гребневую регрессию. \n",
+    "\n",
+    "Гребневая регрессия (англ. ridge regression) - это один из методов понижения размерности. Часто его применяют для борьбы с переизбыточностью данных, когда независимые переменные коррелируют друг с другом (т.е. имеет место мультиколлинеарность). Следствием этого является неустойчивость оценок коэффициентов регрессии. Оценки, например, могут иметь неправильный знак или значения, которые намного превосходят те, которые приемлемы из физических или практических соображений. В данном методе используется l2 регуляризация."
    ]
   },
   {
