--- a/regressions.ipynb
+++ b/regressions.ipynb
@@ -143,6 +143,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "По графику выше видно, что точки лежат с равномерным шумом около линий регрессии, значит выполняется годоскедантичность.\n",
+    "\n",
     "В данном случае лучше всего с задаче справилась полиномиальная регрессия. Теперь очистим данные от аномалий"
    ]
   },
@@ -260,8 +262,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "А в данном случае полиномиальная модель показала себя хуже большинства моделей (кроме RANSAC). Тем не менее, большинство моделей сработали \"плюс-минус одинаково\"."
+    "А в данном случае полиномиальная модель показала себя хуже большинства моделей (кроме RANSAC). Тем не менее, большинство моделей сработали \"плюс-минус одинаково\".\n",
+    "\n",
+    "По графику выше видно, что точки лежат с равномерным шумом около линий регрессии, значит выполняется годоскедантичность."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
