1) Достоинства и недостатки классификаторов 2) Описание дз 3) Про метрики качества для классификаторов

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -185,7 +185,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**KNeighborsClassifier**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "И для начала рассмотрим простейший метод классификации - метод k-ближайших соседей. Этот метод при выборе класса для объекта опирается на то, каким классам принадлежат ближайшие соседи объекта.\n",
+    "\n",
+    "Данный метод имеет некоторые недостатки, например, у него мало параметров настройки алгоритма по данным, в отличие от других классификаторов. Также он неэффективно расходует память(хранит всю обучающую выборку и усложняет решающее правило. \n",
     "\n",
     "Этот метод реализован классом KNeighborsClassifier пакета sklearn."
    ]
@@ -219,9 +228,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**SVC**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Класс SVC реализует метод опорных векторов.\n",
     "\n",
-    "Метод опорных векторов – перевод исходных векторов в пространство более высокой размерности и поиск разделяющей гиперплоскости с наибольшим зазором в этом пространстве."
+    "Метод опорных векторов – перевод исходных векторов в пространство более высокой размерности и поиск разделяющей гиперплоскости с наибольшим зазором в этом пространстве. \n",
+    "\n",
+    "Чем больше расстояние между двумя параллельными гиперплоскостями(они строятся по обеим сторонам гиперплоскости, разделяющей классы), тем меньше будет средняя ошибка классификатора."
    ]
   },
   {
@@ -253,9 +271,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**GaussianNB**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Наивные байесовские алгоритмы — это метод классификации, основанный на применении теоремы Байеса с сильным предположением, что все предикторы независимы друг от друга. Проще говоря, предполагается, что наличие функции в классе не зависит от присутствия любой другой функции в том же классе. Хотя все эти функции зависят друг от друга, они независимо влияют на вероятность того, что телефон является смартфоном.\n",
     "\n",
-    "Использовать мы будем простейшую реализацию этого, а именно GaussianNB, который реализует Гауссовский наивный байесофский классификатор. Он предполагает, что данные каждого класса взяты из простого распределения Гаусса."
+    "Использовать мы будем простейшую реализацию этого, а именно GaussianNB, который реализует Гауссовский наивный байесофский классификатор. Он предполагает, что данные каждого класса взяты из простого распределения Гаусса.\n",
+    "\n",
+    "Достоинством наивного байесовского классификатора является малое количество данных, необходимых для обучения, оценки параметров и классификации."
    ]
   },
   {
@@ -287,9 +314,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**DecisionTreeClassifier**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Дерево принятия решений — средство поддержки принятия решений, использующееся в машинном обучении, анализе данных и статистике. Структура дерева представляет собой «листья» и «ветки». На «ветках» дерева решения записаны признаки, от которых зависит целевая функция, в «листьях» записаны значения целевой функции, а в остальных узлах — признаки, по которым различаются случаи. Чтобы классифицировать новый случай, надо спуститься по дереву до листа и выдать соответствующее значение.\n",
     "\n",
     "Цель состоит в том, чтобы создать модель, которая предсказывает значение целевой переменной на основе нескольких переменных на входе.\n",
+    "\n",
+    "Достоинства:\n",
+    "    - прост в понимании и интерпретации\n",
+    "    - не требуется подготавливать данные\n",
+    "    - способен работать как с категориальными, так и с интервальными переменными\n",
+    "\n",
+    "Недостатки:\n",
+    "    - в процессе построения дерева решений могут создаваться слишком сложные конструкции, которые недостаточно полно представляют данные\n",
+    "    - для данных, которые включают категориальные переменные с большим набором уровней (закрытий), больший информационный вес присваивается тем признакам, которые имеют большее количество уровней.\n",
     "\n",
     "Для реализации этого метода в sklearn есть класс DecisionTreeClassifier."
    ]
@@ -323,9 +366,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В этом разделе рассмотрены методы классификации данных. Все они имеют право на жизнь, решать, какой использовать нужно на основе ваших данных.\n",
+    "**Вывод**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В этом разделе рассмотрены методы классификации данных. Основываясь на достоинствах и недостатках методов, можно выбрать тот, что более всего подходит для конкретной задачи.\n",
     "\n",
-    "Далее продемонстрирую домашнее задание из лекции."
+    "Для сравнения этих методов можно использовать метрики precision(точности) и recall(полноты). \n",
+    "\n",
+    "Recall - это доля представителей положительного класса из всего класса, другими словами - способность находить этот класс. \n",
+    "\n",
+    "Precision - это доля представителей положительного класса верно названных положительными классификатором, другими словами способность отличать этот класс от остальных."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Домашнее задание**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее продемонстрирую домашнее задание из лекции.\n",
+    "\n",
+    "Построим ROC-кривую по заданным параметрам для оценки классификатора. Построим график для оценки. Если прямая на графике пройдет через точку (0, 1), классифиактор - идеален(недостижимо)."
    ]
   },
   {
@@ -379,6 +449,20 @@
     "plt.scatter(FPR, TPR)\n",
     "plt.plot(FPR, TPR, c = 'r')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вышло неплохо, с результатом из лекции совпало, но точку (0, 1) не посетили"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
